--- a/static/css/things.css
+++ b/static/css/things.css
@@ -2,9 +2,18 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+ @media only screen and (max-width: 730px) {
+   #things-view {
+     background: #5d9bc7;
+   }
+ }
+
 #things-view {
   height: 100%;
   overflow: auto;
+  padding-top: 7.5rem;
+  padding-bottom: 7.5rem;
+  box-sizing: border-box;
 }
 
 #things {
@@ -20,5 +29,5 @@
 #add-button {
   bottom: 2rem;
   right: 2rem;
-  background-image: url('../images/add.png');
+  background-image: url('../images/add.svg');
 }
